Migrate last commands (#191)
Co-authored-by: Jakob <simugamz1@gmail.com>
Co-authored-by: Yusuf <yusufgamer222@gmail.com>